# MINGL

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md
.github/workflows/: deploy-vitepress.yml
demo/hello/: CMakeLists.txt  main_page.c
docs/.vitepress/: config.mts
docs/md/: index.md
docs/md/core/: api.md  architecture.md  types.md
docs/md/ctx/: arc.md  base.md  bitmap.md  circle.md  fill_polygon.md  index.md  round_rect.md  text.md
docs/md/hal/: index.md
docs/md/snippets/: event_default_to_action.md  widget_base_args.md  widget_event_args.md  widget_round_radius_args.md
docs/md/subsystem/: action.md  event.md  font.md  logger.md  painter.md  pool.md  render.md  theme.md
docs/md/tools/: font_gen.md  kconfig.md
docs/md/widget/: define_page.md  index.md
docs/md/widget/button/: button.md
docs/md/widget/label/: label.md
docs/md/widget/layout/: linear_layout.md
docs/md/widget/list/: list.md
docs/md/widget/scrollbar/: scrollbar.md
docs/md/widget/slider/: slider.md
platform/sdl/: CMakeLists.txt  Kconfig  hal_sdl.c  hal_sdl.h  main_sdl.c
src/: mgl_config.h
src/core/: mgl_core.c  mgl_core.h  mgl_math.c  mgl_math.h  mgl_rect.c  mgl_rect.h  mgl_static_assert.h  mgl_types.h
src/draw/: mgl_draw.h  mgl_draw_ctx.c  mgl_draw_ctx.h  mgl_draw_ctx_arc.c  mgl_draw_ctx_arc.h  mgl_draw_ctx_bitmap.c  mgl_draw_ctx_bitmap.h  mgl_draw_ctx_circle.c  mgl_draw_ctx_circle.h  mgl_draw_ctx_fill_polygon.c  mgl_draw_ctx_fill_polygon.h  mgl_draw_ctx_round_rect.c  mgl_draw_ctx_round_rect.h  mgl_draw_ctx_text.c  mgl_draw_ctx_text.h
src/event/: mgl_event.c  mgl_event.h
src/font/: mgl_font.h
src/hal/: mgl_hal.h  mgl_hal_sw.c
src/logger/: mgl_log.c  mgl_log.h
src/page/: mgl_page.c  mgl_page.h  mgl_page_manager.c  mgl_page_manager.h  mgl_render.c  mgl_render.h
src/painter/: mgl_color.h  mgl_empty_painter.c  mgl_painter.h  mgl_solid_painter.h
src/pool/: mgl_page_pool.c  mgl_page_pool.h
src/theme/: mgl_theme.c  mgl_theme.h
src/widget/: mgl_layout_utils.c  mgl_layout_utils.h  mgl_widget.c  mgl_widget.h  mgl_widget_blueprint.c  mgl_widget_blueprint.h
src/widget/button/: mgl_button.c  mgl_button.h
src/widget/label/: mgl_label.c  mgl_label.h
src/widget/layout/: mgl_linear_layout.c  mgl_linear_layout.h
src/widget/list/: mgl_list.c  mgl_list.h
src/widget/scrollbar/: mgl_scrollbar.c  mgl_scrollbar.h
src/widget/slider/: mgl_slider.c  mgl_slider.h
tools/: font_gen.py  kconfig.py  requirements.txt
